--- a/res/values-ro-rRO/cr_strings.xml
+++ b/res/values-ro-rRO/cr_strings.xml
@@ -955,7 +955,7 @@
     <string name="status_bar_logo_summary">Afișează o siglă personalizată pe partea stângă sau dreaptă a barei de stare</string>
     <string name="status_bar_logo_position_title">Pozitie logo</string>
     <string name="status_bar_logo_style_title">Stil logo</string>
-    <string name="status_bar_logo_style_crdroid">CrDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_adidas">Adidas</string>
     <string name="status_bar_logo_style_alien">Extraterestru</string>
