--- a/res/values-sk-rSK/cr_strings.xml
+++ b/res/values-sk-rSK/cr_strings.xml
@@ -958,7 +958,7 @@ Ashle-XDA [SLOVAK Preklad]</string>
     <string name="status_bar_logo_summary">Zobraziť vlastné logo na ľavej alebo pravej strane stavového riadka</string>
     <string name="status_bar_logo_position_title">Umiestnenie loga</string>
     <string name="status_bar_logo_style_title">Štýl loga</string>
-    <string name="status_bar_logo_style_crdroid">CrDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_adidas">Adidas</string>
     <string name="status_bar_logo_style_alien">Alien</string>
