--- a/res/values-ar-rSA/cr_strings.xml
+++ b/res/values-ar-rSA/cr_strings.xml
@@ -961,7 +961,7 @@
     <string name="status_bar_logo_summary">عرض شعار مخصص على اليسار أو اليمين من شريط الحالة</string>
     <string name="status_bar_logo_position_title">موقع الشعار</string>
     <string name="status_bar_logo_style_title">نمط الشعار</string>
-    <string name="status_bar_logo_style_crdroid">CrDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">أندرويد</string>
     <string name="status_bar_logo_style_adidas">Adidas</string>
     <string name="status_bar_logo_style_alien">Alien</string>
@@ -998,7 +998,7 @@
     <string name="app_info_install_time">جاري التثبيت %1$s</string>
     <string name="app_info_update_time">تم تحديث %1$s</string>
     <!-- Show clipboard overlay -->
-    <string name="show_clipboard_overlay_title">إعدادات CrDroid</string>
+    <string name="show_clipboard_overlay_title">إعدادات BaikalOS</string>
     <string name="show_clipboard_overlay_summary">إظهار تراكب في الجزء السفلي الأيسر من الشاشة عندما يتم نسخ شيء ما إلى الحافظة</string>
     <!-- Sensor block per-package -->
     <string name="sensor_block_title">تأمين المستشعر</string>
