--- a/res/values-el-rGR/cr_strings.xml
+++ b/res/values-el-rGR/cr_strings.xml
@@ -953,7 +953,7 @@
     <string name="status_bar_logo_summary">Εμφάνιση ενός προσαρμοσμένου λογότυπου στα αριστερά ή στα δεξιά της γραμμής κατάστασης</string>
     <string name="status_bar_logo_position_title">Θέση λογότυπου</string>
     <string name="status_bar_logo_style_title">Στυλ λογότυπου</string>
-    <string name="status_bar_logo_style_crdroid">CrDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_adidas">Adidas</string>
     <string name="status_bar_logo_style_alien">Alien</string>
