--- a/res/values-et-rEE/cr_strings.xml
+++ b/res/values-et-rEE/cr_strings.xml
@@ -19,7 +19,7 @@
     <string name="crdroid_settings_title">BaikalOSi seaded</string>
     <string name="crdroid_settings_summary">Ava hea kraam</string>
     <string name="reset_settings_title">Lähtesta seaded</string>
-    <string name="reset_settings_message">See lähtestab valitud kasutaja jaoks enamus CrDroidi seaded vaikeväärtustele. Kas soovid jätkata?</string>
+    <string name="reset_settings_message">See lähtestab valitud kasutaja jaoks enamus BaikalOSi seaded vaikeväärtustele. Kas soovid jätkata?</string>
     <!-- Personalization Categories -->
     <string name="button_title">Nupud</string>
     <string name="lockscreen_title">Lukustuskuva</string>
@@ -953,7 +953,7 @@
     <string name="status_bar_logo_summary">Kuva kohandatud logo olekuribast vasakul või paremal</string>
     <string name="status_bar_logo_position_title">Logo asukoht</string>
     <string name="status_bar_logo_style_title">Logo stiil</string>
-    <string name="status_bar_logo_style_crdroid">CrDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_adidas">Adidas</string>
     <string name="status_bar_logo_style_alien">Alien</string>
