--- a/res/values-in-rID/cr_strings.xml
+++ b/res/values-in-rID/cr_strings.xml
@@ -951,7 +951,7 @@
     <string name="status_bar_logo_summary">Tampilkan logo khusus di kiri atau kanan bilah status</string>
     <string name="status_bar_logo_position_title">Posisi Logo</string>
     <string name="status_bar_logo_style_title">Gaya logo</string>
-    <string name="status_bar_logo_style_crdroid">CrDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_adidas">Adidas</string>
     <string name="status_bar_logo_style_alien">Alien</string>
