--- a/res/values-iw-rIL/cr_strings.xml
+++ b/res/values-iw-rIL/cr_strings.xml
@@ -957,7 +957,7 @@
     <string name="status_bar_logo_summary">הצגת סמל מסחרי מותאם בימין או בשמאל שורת המצב</string>
     <string name="status_bar_logo_position_title">מיקום הסמל</string>
     <string name="status_bar_logo_style_title">סגנון הסמל</string>
-    <string name="status_bar_logo_style_crdroid">CrDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">אנדרואיד</string>
     <string name="status_bar_logo_style_adidas">אדידס</string>
     <string name="status_bar_logo_style_alien">חייזר</string>
