--- a/res/values-nl-rNL/cr_strings.xml
+++ b/res/values-nl-rNL/cr_strings.xml
@@ -953,7 +953,7 @@
     <string name="status_bar_logo_summary">Toon een aangepast logo links of rechts van de statusbalk</string>
     <string name="status_bar_logo_position_title">Logo positie</string>
     <string name="status_bar_logo_style_title">Logo stijl</string>
-    <string name="status_bar_logo_style_crdroid">CrDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_adidas">Adidas</string>
     <string name="status_bar_logo_style_alien">Alien</string>
