--- a/res/values-ur-rPK/cr_strings.xml
+++ b/res/values-ur-rPK/cr_strings.xml
@@ -953,7 +953,7 @@
     <string name="status_bar_logo_summary">Display a custom logo on left or right of the status bar</string>
     <string name="status_bar_logo_position_title">علامت کی جگہ</string>
     <string name="status_bar_logo_style_title">علامت کا طرز</string>
-    <string name="status_bar_logo_style_crdroid">CrDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">اینڈرائیڈ</string>
     <string name="status_bar_logo_style_adidas">Adidas</string>
     <string name="status_bar_logo_style_alien">Alien</string>
