--- a/res/values-zh-rCN/cr_strings.xml
+++ b/res/values-zh-rCN/cr_strings.xml
@@ -951,7 +951,7 @@
     <string name="status_bar_logo_summary">在状态栏左侧或右侧显示自定义 Logo</string>
     <string name="status_bar_logo_position_title">Logo 位置</string>
     <string name="status_bar_logo_style_title">Logo 样式</string>
-    <string name="status_bar_logo_style_crdroid">CrDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_adidas">Adidas</string>
     <string name="status_bar_logo_style_alien">Alien</string>
