--- a/res/xml/crdroid_settings_lockscreen.xml
+++ b/res/xml/crdroid_settings_lockscreen.xml
@@ -61,12 +61,12 @@
             android:summary="@string/lockscreen_battery_info_summary"
             android:defaultValue="true" />
 
-        <com.crdroid.settings.preferences.SecureSettingSwitchPreference
+        <!-- com.crdroid.settings.preferences.SecureSettingSwitchPreference
             android:key="doze_always_on_charger"
             android:icon="@drawable/ic_doze"
             android:title="@string/baikalos_aod_on_charger_title"
             android:summary="@string/baikalos_aod_on_charger_summary"
-            android:defaultValue="false" />
+            android:defaultValue="false" / -->
 
         <Preference
             android:key="udfps_settings"
