--- a/res/values-es-rES/cr_strings.xml
+++ b/res/values-es-rES/cr_strings.xml
@@ -962,7 +962,7 @@ Mantén presionado para establecer</string>
     <string name="status_bar_logo_summary">Mostrar un logo personalizado a la izquierda o derecha de la barra de estado</string>
     <string name="status_bar_logo_position_title">Posición del logo</string>
     <string name="status_bar_logo_style_title">Estilo del logo</string>
-    <string name="status_bar_logo_style_crdroid">crDroid</string>
+    <string name="status_bar_logo_style_crdroid">BaikalOS</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_adidas">Adidas</string>
     <string name="status_bar_logo_style_alien">Alien</string>
