Fix ru translation
Change-Id: I402613a9d8b9787c86af4eae6cd43a5b5c866bb3

--- a/res/values-ru-rRU/cr_strings.xml
+++ b/res/values-ru-rRU/cr_strings.xml
@@ -946,7 +946,7 @@
     <string name="smart_charging_resume_level_title">Уровень возобновления зарядки</string>
     <string name="smart_charging_reset_stats_title">Сбросить статистику батареи</string>
     <string name="smart_charging_reset_stats_summary">Сбрасывать статистику батареи после достижения заданного уровня заряда</string>
-    <string name="smart_charging_footer">Умная обходная зарядка позволяет вам установить максимальный уровень заряда для увеличения срока жизни аккумулятора. При включенной функции аккумулятор прекратит зарядку по достижении уровня максимального заряда и возобновит зарядку по достижении уровня минимального заряда. Уровень начала зарядки всегда должен быть выше уровня остановки зарядки.</string>
+    <string name="smart_charging_footer">Умная обходная зарядка позволяет вам установить максимальный уровень заряда для увеличения срока жизни аккумулятора. При включенной функции аккумулятор прекратит зарядку по достижении уровня остановки заряда и возобновит зарядку по достижении уровня возобновления заряда. Уровень остановки зарядки всегда должен быть выше уровня возобновления зарядки.</string>
     <!-- Weather -->
     <string name="weather_settings_title">Настройки погоды</string>
     <string name="weather_settings_summary">Настроить набор значков и службу погоды</string>
