Fix baikalify missmerge
Change-Id: I5943f70b98007c1b06e58f207c8a065e57554c63

--- a/res/layout/crdroid_settings.xml
+++ b/res/layout/crdroid_settings.xml
@@ -44,6 +44,6 @@
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".crDroidSettingsLayout"/>
+            tools:context=".BaikalOSSettingsLayout"/>
     </LinearLayout>
 </RelativeLayout>
