--- a/res/xml/crdroid_settings_powersave.xml
+++ b/res/xml/crdroid_settings_powersave.xml
@@ -100,6 +100,13 @@
         />
 
         <com.crdroid.settings.preferences.GlobalSettingSwitchPreference
+            android:key="baikalos_boost_rendering_disable"
+            android:defaultValue="true"
+            android:title="@string/baikalos_rendering_boost_title"
+            android:summary="@string/baikalos_rendering_boost_summary"
+        />
+
+        <com.crdroid.settings.preferences.GlobalSettingSwitchPreference
             android:key="baikalos_boost_display_update_imminent_disable"
             android:defaultValue="true"
             android:title="@string/baikalos_display_boost_title"
