Update Baikal Settings with new options
Change-Id: I0b0e21aae195587176ed5e9ae667b809ea52827b

--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -220,4 +220,7 @@
     <string name="app_profile_full_screen_title">Полный экран</string>
     <string name="app_profile_full_screen_summary">Форсировать полноэкранный режим</string>
 
+    <string name="app_profile_debug_title">Отладка</string>
+    <string name="app_profile_debug_summary">Включить подробный лог для приложения. Не включайте без причины. Расходует ресурсы, увеличивает потребление.</string>
+
 </resources>
