--- a/res/values/powersave_strings.xml
+++ b/res/values/powersave_strings.xml
@@ -4,11 +4,11 @@
     <string name="powersave_title">Power Save</string>
     <string name="powersave_summary">Power Saving Tweaks</string>
 
-    <string name="baikalos_aggressive_idle_title">Aggressive Idle</string>
-    <string name="baikalos_aggressive_idle_summary">Aggressively restrict background processes.</string>
+    <string name="baikalos_aggressive_idle_title">Power Save</string>
+    <string name="baikalos_aggressive_idle_summary">Enable BaikalOS power saving options.</string>
 
-    <string name="baikalos_extreme_idle_title">Extreme Mode</string>
-    <string name="baikalos_extreme_idle_summary">Extremely restrict background processes.</string>
+    <string name="baikalos_extreme_idle_title">Aggressive Mode</string>
+    <string name="baikalos_extreme_idle_summary">Aggressively restrict background processes.</string>
 
     <string name="baikalos_aggressive_device_idle_title">Fast Device Idle</string>
     <string name="baikalos_aggressive_device_idle_summary">Enter Device Idle mode 30 seconds after screen off. Ignore movement</string>
