--- a/res/values/baikal_strings.xml
+++ b/res/values/baikal_strings.xml
@@ -69,7 +69,7 @@
     <string name="aurora_enabled_summary">Control Aurora Store</string>
 
     <string name="dolby_enabled_title">Dolby</string>
-    <string name="dolby_enabled_summary">Dolby Audio Service</string>
+    <string name="dolby_enabled_summary">Dolby Audio Service. Reboot required for changes to take effect!</string>
 
     <string name="jdsp_enabled_title">James DSP</string>
     <string name="jdsp_enabled_summary">James DSP audio processor</string>
@@ -156,5 +156,27 @@
 
     <string name="app_profile_heavy_cpu_title">Heavy CPU</string>
     <string name="app_profile_heavy_cpu_summary">This app uses a lot of CPU. Drop down priority of any background app.</string>
+
+    <string name="baikalos_little_freq_max_title">Little cluster max freq</string>
+    <string name="baikalos_little_freq_min_title">Little cluster min freq</string>
+
+    <string name="baikalos_big_freq_max_title">Big cluster max freq</string>
+    <string name="baikalos_big_freq_min_title">Big cluster min freq</string>
+
+    <string name="baikalos_bigplus_freq_max_title">Big+ cluster max freq</string>
+    <string name="baikalos_bigplus_freq_min_title">Big+ cluster min freq</string>
+
+    <string name="baikalos_gpu_max_title">GPU max freq</string>
+    <string name="baikalos_gpu_min_title">GPU min freq</string>
+
+
+    <string name="baikalos_task_boost_title">Task boost</string>
+    <string name="baikalos_silver_boost_title">Little cluster boost</string>
+    <string name="baikalos_gold_boost_title">Big cluster boost boost</string>
+    <string name="baikalos_plus_boost_title">Big+ core boost</string>
+
+    <string name="baikalos_little_core_ctl_title">Little cluster core control</string>
+    <string name="baikalos_big_core_ctl_title">Big cluster core control</string>
+    <string name="baikalos_plus_core_ctl_title">Big+ core control</string>
 
 </resources>
