--- a/res/xml/baikal_profile_edit.xml
+++ b/res/xml/baikal_profile_edit.xml
@@ -23,7 +23,7 @@
     xmlns:lineage="http://schemas.android.com/apk/res-auto"
     android:title="@string/baikalos_profile_edit_title">
 
-    <PreferenceCategory
+    <!-- PreferenceCategory
         android:title="Interaction Boost">
 
         <com.crdroid.settings.preferences.SystemPropertiesListPreference
@@ -43,6 +43,14 @@
             android:defaultValue="-99999" />
 
         <com.crdroid.settings.preferences.SystemPropertiesListPreference
+            android:key="persist.baikal.boost.CPUBigPlusClusterMinFreq"
+            android:title="Big cluster max freq"
+            android:dialogTitle="Big cluster max freq"
+            android:entries="@array/baikalos_big_cluster_entries"
+            android:entryValues="@array/baikalos_big_cluster_values"
+            android:defaultValue="-99999" />
+
+        <com.crdroid.settings.preferences.SystemPropertiesListPreference
             android:key="persist.baikal.boost.CPULittleClusterMinFreq"
             android:title="Little cluster min freq"
             android:dialogTitle="Little cluster min freq"
@@ -54,6 +62,14 @@
             android:key="persist.baikal.boost.CPUBigClusterMinFreq"
             android:title="Big cluster min freq"
             android:dialogTitle="Big cluster min freq"
+            android:entries="@array/baikalos_big_cluster_entries"
+            android:entryValues="@array/baikalos_big_cluster_values"
+            android:defaultValue="-99999" />
+
+        <com.crdroid.settings.preferences.SystemPropertiesListPreference
+            android:key="persist.baikal.boost.CPUBigPlusClusterMaxFreq"
+            android:title="Big cluster max freq"
+            android:dialogTitle="Big cluster max freq"
             android:entries="@array/baikalos_big_cluster_entries"
             android:entryValues="@array/baikalos_big_cluster_values"
             android:defaultValue="-99999" />
@@ -577,6 +593,6 @@
             android:entryValues="@array/baikalos_boost_values"
             android:defaultValue="-99999" />
 
-    </PreferenceCategory>
+    </PreferenceCategory -->
 
 </PreferenceScreen>
